...

  @override
  Widget build(BuildContext context) {
    var gpsFootprintProvider = context.watch<GPSFootprintProvider>();

    return Scaffold(
      key: Key('home_screen'),
      appBar: AppBar(
        title: Text('GPS Tracker'),
        centerTitle: true,
        actions: [
          PopupMenuButton<HomeMenuItems>(
            itemBuilder: (context) => [
...
